--- a/angularAR/src/app/home/home.component.html
+++ b/angularAR/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<button mat-raised-button color="primary" routerLink="/signup">
+  Sign Up
+</button>
+
+<button mat-raised-button color="primary" routerLink="/login">
+  Login
+</button>
+
+<button mat-raised-button color="primary" routerLink="/dashboard">
+  Dashboard
+</button>
+
+<div *ngIf="(afAuth.user | async)">
+  User is logged in
+
+  <br>
+  <button mat-raised-button color="primary" click="logout()">
+    Log out
+  </button>
+</div>
+
+<div *ngIf="!(afAuth.user | async)">
+  User is not logged in
+</div>
