--- a/angularAR/src/app/home/home.component.html
+++ b/angularAR/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <button mat-raised-button color="primary" routerLink="/signup">
-  Sign Up
+  Signup
 </button>
 
 <button mat-raised-button color="primary" routerLink="/login">
@@ -14,11 +14,11 @@
   User is logged in
 
   <br>
-  <button mat-raised-button color="primary" click="logout()">
-    Log out
+  <button mat-raised-button color="primary" (click)="logout()">
+      Log out
   </button>
 </div>
-
 <div *ngIf="!(afAuth.user | async)">
   User is not logged in
 </div>
+
