--- a/angularAR/src/app/home/home.component.html
+++ b/angularAR/src/app/home/home.component.html
@@ -1,3 +1,5 @@
+
+<div class="test">
 <button mat-raised-button color="primary" routerLink="/signup">
   Signup
 </button>
@@ -19,6 +21,6 @@
   </button>
 </div>
 <div *ngIf="!(afAuth.user | async)">
-Hello
+test
 </div>
-
+</div>
