--- a/angularAR/src/app/login/login.component.html
+++ b/angularAR/src/app/login/login.component.html
@@ -16,6 +16,10 @@
               <input autocomplete="off" formControlName="password" type="password" matInput placeholder="Password">
           </mat-form-field>
       </p>
+
+      <button mat-raised-button color="primary" routerLink="/signup">
+        Signup
+      </button>
       <div *ngIf="firebaseErrorMessage != ''" class="error-style">
           <span>{{ firebaseErrorMessage }}</span>
       </div>
