--- a/angularAR/src/app/home/home.component.html
+++ b/angularAR/src/app/home/home.component.html
@@ -1,4 +1,10 @@
 
+<button class="hamburger" type="button">
+  <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+</button>
+
 <div class="test">
 <button mat-raised-button color="primary" routerLink="/signup">
   Signup
